--- a/Worker/Worker.csproj
+++ b/Worker/Worker.csproj
@@ -7,6 +7,16 @@
 	<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Content Include="MGEXWorker.cs" />
+    <Content Include="MGEXWorkerService.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="wwwroot\MGEXWorker.js" />
+    <None Include="wwwroot\MGEXWorkerService.js" />
+  </ItemGroup>
+
 
   <ItemGroup>
     <SupportedPlatform Include="browser" />
